--- a/resource.qrc
+++ b/resource.qrc
@@ -20,5 +20,6 @@
   <file alias="attack_cursor.png">image/attack_cursor.png</file>
   <file alias="skill_cursor.png">image/skill_cursor.png</file>
   <file alias="normal_cursor.png">image/normal_cursor.png</file>
+  <file alias="attack_ind1.png">image/attack_ind1.png</file>
 </qresource>
 </RCC>
