--- a/resource.qrc
+++ b/resource.qrc
@@ -21,5 +21,14 @@
   <file alias="skill_cursor.png">image/skill_cursor.png</file>
   <file alias="normal_cursor.png">image/normal_cursor.png</file>
   <file alias="attack_ind1.png">image/attack_ind1.png</file>
+  <file alias="gameStart.png">icons/gameStart.png</file>
+  <file alias="gamePause.png">icons/gamePause.png</file>
+  <file alias="gameEnd.png">icons/gameEnd.png</file>
+  <file alias="loadAI.png">icons/loadAI.png</file>
+  <file alias="loadMap.png">icons/loadMap.png</file>
+  <file alias="modeRun.png">icons/modeRun.png</file>
+  <file alias="modeDebug.png">icons/modeDebug.png</file>
+  <file alias="reset.png">icons/reset.png</file>
+  <file alias="icon.png">icons/icon.png</file>
 </qresource>
 </RCC>
